--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "climits": "cpp"
+        "climits": "cpp",
+        "array": "cpp",
+        "string": "cpp",
+        "vector": "cpp"
     }
 }
