complete code-7 program exercises

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
+        "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
         "cctype": "cpp",
@@ -17,6 +18,7 @@
         "cwchar": "cpp",
         "exception": "cpp",
         "format": "cpp",
+        "fstream": "cpp",
         "initializer_list": "cpp",
         "ios": "cpp",
         "iosfwd": "cpp",
@@ -25,20 +27,24 @@
         "iterator": "cpp",
         "limits": "cpp",
         "locale": "cpp",
+        "map": "cpp",
         "memory": "cpp",
         "mutex": "cpp",
         "new": "cpp",
         "ostream": "cpp",
         "ratio": "cpp",
+        "sstream": "cpp",
         "stdexcept": "cpp",
         "stop_token": "cpp",
         "streambuf": "cpp",
+        "string": "cpp",
         "system_error": "cpp",
         "thread": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
+        "vector": "cpp",
         "xfacet": "cpp",
         "xiosbase": "cpp",
         "xlocale": "cpp",
@@ -51,12 +57,7 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp",
-        "climits": "cpp",
-        "array": "cpp",
-        "string": "cpp",
-        "vector": "cpp",
-        "fstream": "cpp",
-        "sstream": "cpp"
+        "xtree": "cpp",
+        "xutility": "cpp"
     }
 }
